--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
       </div>
     </main>
     <footer>
-      <p>by your truly</p>
+      <p>
+        <a href="https://github.com/tanmayrajk/carsayings"
+          ><i class="ti ti-brand-github"></i
+        ></a>
+      </p>
     </footer>
   </body>
 </html>
