--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     </nav>
     <main>
       <div id="car-saying">
+        <img id="car-pic" src="0.png" alt="car" />
         <p id="saying-text">"meow meow, meow meow meow?"</p>
         <p id="saying-author">- car</p>
       </div>
